[feat] 작품구매자/작가 마이페이지 조회 API 구현 및 Swagger 명세 작성
