# config/swagger-output.json
@@ -530,6 +530,124 @@
           }
         }
       }
+    },
+    "/api/exhibitions": {
+      "get": {
+        "description": "등록된 전시 목록을 조회합니다.",
+        "parameters": [
+          {
+            "name": "sort",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/exhibitions/{exhibitionId}": {
+      "get": {
+        "parameters": [
+          {
+            "name": "exhibitionId",
+            "in": "path",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": { 
+            "description": "Created" 
+          },
+          "404": { 
+            "description": "Not Found"
+           },
+          "500": { 
+            "description": "Internal Server Error" 
+          }
+        }
+      }
+    },
+    "/api/exhibitions": {
+      "post": {
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "author_id": {
+                   "type": "integer"
+                   },
+                "gallery_id": {
+                   "type": "integer" 
+                  },
+                "title": {
+                   "type": "string" 
+                  },
+                "artworks": {
+                  "type": "array",
+                  "items": { 
+                    "type": "integer"
+                   }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": { 
+            "description": "Created" 
+          },
+          "400": {
+             "description": "Bad Request"
+             },
+          "500": { 
+            "description": "Internal Server Error" 
+          }
+        }
+      }
+    },
+    "/api/mypage/{user_id}": {
+      "get": {
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": { 
+            "description": "Created"
+           },
+          "400": { 
+            "description": "Bad Request"
+           },
+          "404": { 
+            "description": "Not Found" 
+          },
+          "500": { 
+            "description": "Internal Server Error" 
+          }
+        }
+      }
     }
   }
 }
