# index.js
@@ -20,6 +20,8 @@ import userSpaceRoutes from './src/domain/User/userSpaceRoutes.js';
 import artworkRoutes from './src/domain/Artwork/artworkCreateRoutes.js';
 import artworkDetailRoutes from './src/domain/Artwork/artworkDetailRoutes.js';
 import mainHomeRoutes from './src/domain/Artwork/mainHomeRoutes.js';
+import exhibitionRoutes from './src/domain/Exhibition/ExhibitionModel.js';
+import myPageRoutes from './src/domain/MyPage/MyPageRoutes.js';
 
 const app = express();
 const PORT = process.env.PORT || 5000;
@@ -55,6 +57,9 @@ app.use(cors({
   app.use('/api/author', authorRoutes); // 작가
   app.use('/api/',mainHomeRoutes ); // 작가
   app.use('/api/auction', auctionrRoutes); // 경매
+
+  app.use('/api/exhibitions', exhibitionRoutes);  // 전시
+  app.use('/api/mypage', myPageRoutes);  // 마이페이지
 
   //웹소켓
   initializeWebSocket(app);
